--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,9 @@
     <string name="buy">Купить</string>
     <string name="price">Цена</string>
     <string name="quantity">Количество</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cancel">Отменить</string>
     <string name="save">Сохранить</string>
     <string name="name">Название</string>
+    <string name="rub">руб.</string>
+    <string name="quant">шт.</string>
 </resources>
