almost did 1 task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="name">Название</string>
     <string name="rub">руб.</string>
     <string name="quant">шт.</string>
+    <string name="toastError">Что-то введено неверно!</string>
+    <string name="toastUpdate">Информация обновлена!</string>
+    <string name="toastSave">Информация сохранена!</string>
+
 </resources>
