continue working. 1 and 3 tasks completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="toastError">Что-то введено неверно!</string>
     <string name="toastUpdate">Информация обновлена!</string>
     <string name="toastSave">Информация сохранена!</string>
+    <string name="toastDelete">Информация удалена!</string>
+    <string name="toastBuy">Покупка прошла успешно!</string>
 
 </resources>
